# claude_py_scaffold

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  app.db  docker-compose.yml  pyproject.toml
.claude/: DEVELOPMENT.md  commands.md  settings.local.json
.cursor/rules/: api-module.mdc
.github/workflows/: docker-build.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial.py
claude_py_scaffold/: config.py  database.py  deps.py  exceptions.py  handlers.py  logging.py  main.py  middleware.py  schemas.py  security.py  token.py
claude_py_scaffold/models/: __init__.py  base.py  user.py
claude_py_scaffold/routers/: auth.py  users.py
claude_py_scaffold/routers/v1/: auth.py  users.py
claude_py_scaffold/utils/: pagination.py
scripts/: docker-build.sh  install-hooks.sh
tests/: test_users.py
